--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ input[type='submit'], button, [aria-label]{
     margin-top: 20px;
     font-size: 20px;
     font-family: Bahnschrift;
+    text-align: center;
 }
 
 tbody{
